fix(consola): la lista de mods ya no sale como errores, y la app arregla los avisos que le tocan
Qué pasaba, con un servidor Fabric de 76 mods:

- La lista entera de mods salía en rojo, como si todos hubieran fallado. El
  cargador la sangra con tabuladores, y un tabulador se tomaba por una línea de
  una traza de error.
- Las líneas WARNING: de la propia JVM también salían en rojo: van por la salida
  de errores, y todo lo que llega por ahí se pintaba rojo.
- Las líneas que explican un aviso —las cinco del G1 de Distant Horizons, las de
  debajo de «Warnings were found!»— salían grises. Cada línea se juzgaba sola, y
  solo la primera lleva nivel.

Qué hace ahora:

- Una línea sin prefijo de log pertenece a la entrada de encima y toma su nivel.
  El view model le pasa al clasificador cómo era la línea anterior de stdout, y lo
  reinicia al arrancar para que la primera línea no herede el color de un cierre
  con fallo. Sale mejor que antes también en los errores: el mensaje de una
  excepción, que no lleva nivel, se pintaba como salida normal justo debajo de la
  línea roja que la anunciaba.
- Las trazas se reconocen por su forma —«at x.y(File:1)», «Caused by:», «... 12
  more»— y no por la sangría.
- Las WARNING: de la JVM van en amarillo. El resto de stderr sigue en rojo.

Y dos avisos que eran de la app, así que los resuelve ella:

- Desde Java 22 añade --enable-native-access=ALL-UNNAMED al comando que
  construye. Los mods que usan JNA provocan un aviso que dice que un Java futuro
  bloqueará la llamada en vez de avisar: el servidor dejaría de funcionar con una
  actualización de Java sin haber cambiado nada. Solo desde 22, porque una opción
  que la JVM no conoce le impide arrancar; y nunca por encima de lo que el usuario
  haya puesto en sus argumentos extra.
- Cuando BlueMap avisa de que falta aceptar su descarga, la app pregunta una vez
  por arranque. No acepta por nadie: es consentir bajar ficheros del cliente de
  Mojang. Si la respuesta es sí, cambia ese 